# aiedge

./: Cargo.toml  README.md
atlas-onnx-tracer/models/mediapipe_text_classifier/: labels.json  network.onnx  vocab.json
demos/ai-edge-ap2/: IMPLEMENTATION_PLAN.md  INTEGRATION_PLAN.md  README.md
demos/ai-edge-ap2/ap2-service/: ai_edge_classifier.py  config.py  main.py  models.py  requirements.txt
demos/ai-edge-ap2/backend/: Cargo.toml
demos/ai-edge-ap2/backend/src/: main.rs
demos/ai-edge-ap2/backend/src/ap2/: mod.rs
demos/ai-edge-ap2/backend/src/api/: mod.rs
demos/ai-edge-ap2/backend/src/zkml/: mod.rs
demos/ai-edge-ap2/frontend/: index.html
demos/ai-edge-ap2/scripts/: run-demo.sh
examples/: agentic_spending_guardrails.rs  mediapipe_mlp_proof.rs  mediapipe_text_classifier.rs
onnx-tracer/models/mediapipe_text_classifier/: meta.json  network.onnx  network_mlp.onnx  network_mlp_v2.onnx  network_mlp_v3.onnx  network_mlp_v4.onnx  network_mlp_v5.onnx  network_mlp_v6.onnx
onnx-tracer/models/spending_classifier/: categories.json  network.onnx  policy.json  test_cases.json
onnx-tracer/src/: trace_types.rs
onnx-tracer/src/instructions/: identity.rs  mod.rs
onnx-tracer/src/ops/: poly.rs
scripts/: build_spending_classifier.py
zkml-jolt-core/src/jolt/executor/instructions/: identity.rs  mod.rs
zkml-jolt-core/src/utils/: precompile_pp.rs
