[package]
name = "ai-edge-ap2-demo"
version = "0.1.0"
edition = "2021"

# Part of jolt-atlas workspace - uses real ZKML proofs by default

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for AP2 service
reqwest = { version = "0.11", features = ["json"] }

# Real ZKML - Jolt Atlas (from workspace)
zkml-jolt-core = { path = "../../../zkml-jolt-core" }
onnx-tracer = { path = "../../../onnx-tracer" }
jolt-core = { git = "https://github.com/ICME-Lab/zkml-jolt", branch = "dev", package = "jolt-core", default-features = true }
ark-bn254 = "0.5.0"
regex = "1.10.6"
